# agent

./: .gitignore
agent/agent-service/: debug_memory_data.py  requirements.txt  requirements_text_extraction.txt
agent/agent-service-test/: test_rag_service_sorting.py  test_rag_sorting.py
agent/agent-service/src/python/: main.py  test_memory_save.py  test_prompt_routing.py  test_rag_service.py
agent/agent-service/src/python/docs/: chain_trace_readme.md
agent/agent-service/src/python/test/: chain_trace_test.py
agent/agent-service/src/python/utils/: chain_tracker.py
agent/agent-service/src/resources/: application.yaml  model-desc.md
agent/mcp-service/src/python/: main.py
agent/mcp-service/src/python/docs/: advanced_echarts_readme.md
agent/mcp-service/src/python/test/: advanced_echarts_test.py
agent/mcp-service/src/resources/: application.yaml
agent/vllm-application/src/: pyproject.toml  readME.md  requirements.txt
agent/vllm-application/src/python/: main.py  running.sh
agent/vllm-application/src/python/domain/service/: embedding_service.py  llm_service.py  reranker_service.py  vlm_service.py
agent/vllm-application/src/python/infrastructure/client/: q_drant_client.py  redis_client.py
agent/vllm-application/src/python/infrastructure/commandline_runner/: base_runner.py  devops_runner.py
agent/vllm-application/src/python/infrastructure/common/error/: README.md  errcode.py
agent/vllm-application/src/python/infrastructure/common/logging/: logging.py
agent/vllm-application/src/python/infrastructure/common/myfunc/: myfile.py
agent/vllm-application/src/python/infrastructure/config/: sys_config.py
agent/vllm-application/src/python/infrastructure/persistences/: mysql_persistence.py  qdrant_persistence.py
agent/vllm-application/src/python/infrastructure/utils/queue/: local_priority_queue.py  local_queue.py
agent/vllm-application/src/python/infrastructure/utils/vector/: vector_func.py
agent/vllm-application/src/python/interfaces/assembler/: llm_assembler.py  vlm_assembler.py
agent/vllm-application/src/python/interfaces/controller/: embedding_controller.py  llm_controller.py  ops_controller.py  reranker_controller.py  vlm_controller.py
agent/vllm-application/src/python/interfaces/dto/: embedding_dto.py  llm_dto.py  ops_dto.py  reranker_dto.py  response_dto.py  vlm_dto.py
agent/vllm-application/src/python/interfaces/dto/__pycache__/: reranker_dto.cpython-310.pyc.2572968790128
agent/vllm-application/src/resources/: application.yaml
agent/vllm-application/src/test/: config.yaml  embedding_test.py  llm_test.py  reranker_test.py  test_desc.md  vlm_test.py
configure/nacos/: base-info.yaml  nacos-app-db.yaml  nacos-db.yaml  nacos-mq.yaml  security.yaml
configure/sql/: agent.sql  load-ontology.py  mcp_service_tables.sql  parking_rag_ontology.cypher  platform_service.sql  prompt.sql  rag_role_memory.sql  tools_skills.sql
platform-service/: pom.xml
platform-service/gateway/: pom.xml
platform-service/gateway/src/main/resources/: application.yml  log4j2.xml
platform-service/security/: pom.xml
platform-service/usermng/: pom.xml
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
web/src/: App.vue  main.js
web/src/api/: applicationRole.js  auth.js  chat.js  constants.js  mcpTools.js  memory.js  prompt.js  rag.js  request.js
web/src/components/: LanguageSwitcher.vue
web/src/i18n/: index.js
web/src/i18n/locales/: en.js  zh.js
web/src/router/: index-debug.js  index.js  routes.json
web/src/store/: auth.js  chat.js  rag.js
web/src/stores/: auth.js  chat.js
web/src/styles/: main.scss
web/src/utils/: fileHelper.js
web/src/views/: ChatView.vue  DeviceMngView.vue  LoggerAuditView.vue  LoggerMngView.vue  LoginView.vue  MCPToolsConfig.vue  ManagerView.vue  McpToolDiscoveryView.vue  McpToolRatingView.vue  McpToolRelationView.vue  McpToolVersionView.vue  McpToolsMngView.vue  McpToolsServiceMngView.vue  MemoryMng.vue  PromptMng.vue  PromptOperaView.vue  PromptTestView.vue  RAGSetting.vue  RAGSettingSubChunkView.vue  RAGSettingSubCreateView.vue  RAGSettingSubMngView.vue  RoleMng.vue  RoleOpera.vue  Setting.vue  SkillsConfig.vue  TaskOrchestration.vue  WarnningView.vue
(+208 files in other folders)
